View Issue Details

IDProjectCategoryView StatusLast Update
0024246Open CASCADEOCCT:DRAWpublic2013-12-19 13:58
ReporteremvAssigned Tobugmaster  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
Product Version6.6.0 
Target Version6.7.0Fixed in Version6.7.0 
Summary0024246: Draw command stepread given without arguments throws an exception
DescriptionDraw command stepread given whithout arguments throws an exception
Steps To Reproducestepread
An exception was caught 00710AFC : OSD_Exception_ACCESS_VIOLATION: ACCESS VIOLATION at address 0xFDFDFDFD during 'READ' operation
** Exception ** 00710AFC : OSD_Exception_ACCESS_VIOLATION: ACCESS VIOLATION at address 0xFDFDFDFD during 'READ' operation
Additional information
and documentation updates
Added check for the number of arguments.
TagsNo tags attached.
Test case numberNot needed

Activities

emv

2013-10-10 10:47

developer   ~0026014

Git branch CR24246 is ready to be reviewed.

abv

2013-10-10 11:04

manager   ~0026017

Minor remark: DRAW command should return 1 in case of error; the correction is pushed to CR24246. Reviewed, please test

apn

2013-10-14 13:25

administrator   ~0026066

Dear BugMaster,

Branch CR24246 (and products from GIT master) was compiled on Linux and Windows platforms and tested.
SHA-1: 45d39fac329c5bc59f97d36944ba273b13585d5f

Number of compiler warnings:

occt component :
Linux: 370 (370 on master)
Windows: 6 (6 on master)

products component :
Linux: 191 (191 on master)
Windows: 287 (287 on master)

Regressions:
No regressions

Improvements:
No improvements

Testing cases:
Not needed

Testing on Linux:
Total MEMORY difference: 350282132 / 350442476
Total CPU difference: 42091.58000000102 / 43210.250000000946

Testing on Windows:
Total MEMORY difference: 406819308 / 411299304
Total CPU difference: 28744.3125 / 37715.765625

There are not differences in images found by testdiff.

Related Changesets

occt: master f933f9cf

2013-10-17 08:07:09

emv


Committer: bugmaster Details Diff
0024246: Draw command stepread given whithout arguments throws an exception

To stepread command added check for the number of arguments.
Minor correction (return 1 to indicate error)
Affected Issues
0024246
mod - src/XSDRAWSTEP/XSDRAWSTEP.cxx Diff File

Issue History

Date Modified Username Field Change
2013-10-10 10:13 emv New Issue
2013-10-10 10:13 emv Assigned To => abv
2013-10-10 10:47 emv Note Added: 0026014
2013-10-10 10:47 emv Status new => resolved
2013-10-10 10:47 emv Target Version => 6.7.0
2013-10-10 10:47 emv Additional Information Updated
2013-10-10 11:04 abv Note Added: 0026017
2013-10-10 11:04 abv Assigned To abv => bugmaster
2013-10-10 11:04 abv Status resolved => reviewed
2013-10-10 11:16 apn Assigned To bugmaster => apn
2013-10-11 12:36 apn Summary Draw command stepread given whithout arguments throws an exception => Draw command stepread given without arguments throws an exception
2013-10-14 13:25 apn Note Added: 0026066
2013-10-14 13:26 apn Test case number => Not needed
2013-10-14 13:26 apn Assigned To apn => bugmaster
2013-10-14 13:26 apn Status reviewed => tested
2013-10-18 13:47 bugmaster Changeset attached => occt master f933f9cf
2013-10-18 13:47 bugmaster Status tested => verified
2013-10-18 13:47 bugmaster Resolution open => fixed
2013-12-19 13:51 bugmaster Status verified => closed
2013-12-19 13:58 bugmaster Fixed in Version => 6.7.0