0024246: Draw command stepread given whithout arguments throws an exception

To stepread command added check for the number of arguments.
Minor correction (return 1 to indicate error)